# odnakosynth-picoosc

./: README.md
freq-counter/: CMakeLists.txt  README.md  core1.c  core1.h  counter.pio  crc8x.c  frequencyCounter.c  frequencyCounter.h  main.c  midi.c  midinote.c  midinote.h  mpc4822.c  usb_descriptors.c
freq-counter/pmiditool/pmiditool/: pmiditool.sln
freq-counter/pmiditool/pmiditool/pmiditool/: FrequencyHandler.cs  FrequencyMessageEventArgs.cs  Midi.cs  MidiNotenData.cs  OctaveAmountHandler.cs  OctaveMessageEventArgs.cs  Program.cs  crc8x.cs  pmiditool.csproj
k-106/: .gitignore  CMakeLists.txt  README.md  core1.c  core1.h  crc8x.h  main.c  midi.c  midi.h  midinote.c  midinote.h  mpc4822.c  mpc4822.h  pico-dco.pio
pwmosc/: CMakeLists.txt  main.c
pwmr2rosc/: README.md  main.c
spiosc/: CMakeLists.txt  README.md  main.c
